--- a/style.css
+++ b/style.css
@@ -95,3 +95,31 @@ main .main_input_container:hover{
     width: 20px;
     height: 20px;
 }
+
+.main_buttons{
+    width: 530px;
+    margin: 0 auto;
+}
+
+.main_buttons button{
+    height: 30px;
+    background-color: aliceblue;
+    border: 0;
+    font-size: 14px;
+    border-radius: 8px;
+    padding: 0 15px;
+    margin-right: 15px;
+}
+
+.main_buttons button:hover{
+    border: 1px solid rgb(180, 180, 180);
+    box-shadow: 0 1px 1px black;
+}
+
+footer{
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+}
