--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ footer{
     grid-template-columns: 1fr 1fr;
     align-items: center;
     font-size: 14px;
-    background-color: darkgrey;
-    border-top: 1px solid black;
+    background-color: rgb(220, 220, 220);
+    border-top: 1px solid rgb(135, 135, 135);
 }
 
 footer ul{
@@ -151,4 +151,5 @@ footer .right{
 footer ul li a{
     margin: 10px;
     color: black;
+    text-decoration: none;
 }
